--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+mycert.crt
+mykey.key
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
