--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "editor.wordWrap": "on",
     "workbench.editor.enablePreview": false,
     "editor.fontSize": 20,
-    "workbench.colorTheme": "Atom One Light",
+    "workbench.colorTheme": "GitHub Light Default",
     "terminal.integrated.tabs.defaultColor": "terminal.ansiBlue",
     
     "terminal.integrated.cursorStyle": "line",
